# legacy-sipXlang-it

./: Makefile.am  configure.ac  sipxlang-it.spec.in
sipxpbx/: sipxplugin.beans.xml
sipxpbx/WEB-INF/acd/: AcdAgentPresencePanel_it.properties  AcdHistoryPage_it.properties  EditAcdQueue_it.properties
sipxpbx/WEB-INF/admin/: AboutDialog_it.properties  AlarmTrapReceiverPanel_it.properties  AlarmTypes_it.properties  HistoryAlarmsPanel_it.properties  MonitoringConfigurationPage_it.properties  MonitoringTargetsConfigurationPage_it.properties  UserRingTable_it.properties
sipxpbx/WEB-INF/backup/: BackupForm_it.properties  BackupPage_it.properties  BackupTable_it.properties
sipxpbx/WEB-INF/cdr/: CdrFilter_it.properties  CdrPage_it.properties
sipxpbx/WEB-INF/common/: AssetSelector_it.properties  (+2 more)
sipxpbx/aastra/: line_it.properties  phone_it.properties
sipxpbx/acd/: sipxacd-agent_it.properties  sipxacd-audio_it.properties  sipxacd-line_it.properties  sipxacd-queue_it.properties  sipxacd-server_it.properties
sipxpbx/backup/: backup_it.properties
sipxpbx/commserver/: server_it.properties  siptrunk_it.properties  user-settings_it.properties
sipxpbx/lg-nortel/: line_it.properties  phone_it.properties
sipxpbx/linksysPhone/: line_it.properties  phone_it.properties
sipxpbx/nortel/: line_it.properties  phone_it.properties
sipxpbx/nt1535/: line_it.properties  phone_it.properties
sipxpbx/polycom/: line_it.properties  phone_it.properties
sipxpbx/sipxacccode/: sipxacccode_it.properties
sipxpbx/sipxbridge/: bridge_sbc_it.properties
sipxpbx/sipxconference/: bridge_it.properties  conference_it.properties
sipxpbx/sipxivr/: sipxivr_it.properties
sipxpbx/sipxpark/: park-orbit_it.properties
sipxpbx/sipxvxml/: autoattendant_it.properties
sipxpbx/snmp/: snmp_it.properties
sipxpbx/snom/: line_it.properties  phone_it.properties
stdprompts/: DATE_DMY
(+53 files in other folders)
