AC_PREREQ(2.57)
AC_INIT(sipxecs-lang-de, 4.2.1, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([stdprompts_de/01.wav])
m4_include([config/sipXlib2.m4])
AM_INIT_AUTOMAKE(foreign tar-ustar)
AC_SUBST(LANG_ID,it)
AC_CONFIG_FILES([
  Makefile
  sipxecs-lang-de.spec
])
AC_OUTPUT
